# bimaru-logical-solver

./: README.md  pyproject.toml
examples/: solve_from_json.py
src/bimaru_solver/: __init__.py  board.py  puzzle_io.py  rules.py  solver.py
tests/: test_fleet_validation.py  test_solver_integration.py
tests/fixtures/: puzzle_sample.json
